--- a/client/src/public/css/goldSnowTheme.css
+++ b/client/src/public/css/goldSnowTheme.css
@@ -7,6 +7,17 @@
     .navbar {
       background: linear-gradient(135deg, #f1e2c7, #d3e4ee); /* Light gold and soft blue gradient */
     }
+  /* Example: Gold Snow Theme */
+.fixed-bg {
+    background: url('../images/Gold-Snow.png') center top no-repeat;
+    background-size: cover;
+    height: 400px; /* Adjust as needed */
+    position: fixed;
+    width: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+  }
   
     /* Item Card */
     .item-card {
