--- a/client/src/public/css/largeFlakeTheme.css
+++ b/client/src/public/css/largeFlakeTheme.css
@@ -7,6 +7,17 @@
     .navbar {
       background: linear-gradient(135deg, #1a557c, #cadef1); /* Deep navy and sky blue gradient */
     }
+  /* Example: Gold Snow Theme */
+.fixed-bg {
+    background: url('../images/Large-Flake.png') center top no-repeat;
+    background-size: cover;
+    height: 400px; /* Adjust as needed */
+    position: fixed;
+    width: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+  }
   
     /* Item Card */
     .item-card {
