--- a/client/src/public/css/snowyTreeTheme.css
+++ b/client/src/public/css/snowyTreeTheme.css
@@ -13,6 +13,17 @@
       border: 2px solid #bd9462; /* Earthy brown border */
       background: #fff3c6; /* Light cream background */
     }
+  /* Example: Gold Snow Theme */
+.fixed-bg {
+    background: url('../images/Snowy-Tree.png') center top no-repeat;
+    background-size: cover;
+    height: 400px; /* Adjust as needed */
+    position: fixed;
+    width: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+  }
   
     /* Buttons */
     .add-to-cart-btn {
